--- a/index.html
+++ b/index.html
@@ -83,6 +83,22 @@
         </main>
     </div>
 
+    <div class="PopOverlay">
+        <div class="PopUp">
+            <button class="close-butt">&#10005;</button>
+            <div class="popup-thumbnail">
+                <img src="" alt="">
+            </div>
+            <div class="popup-content">
+                <h1 class="project-name">This is filler text!</h1>
+                <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta illum ipsum laborum fugit ullam odio, modi qui itaque officiis, tempore totam porro nostrum, tenetur culpa odit. Mollitia, nesciunt possimus! Ad!</p>
+            </div>
+            <div class="button-wrap">
+                <button class="probutt">Go to project</button>
+            </div>
+        </div>
+    </div>
+
     <script>
   const hamburger = document.getElementById('hamburger');
   const closeBtn = document.getElementById('close');
