removal of japan.html

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                     </div>
                 </div>
 
+                <!--Nope
                 <div class="project" id="Japan">
                     <div class="thumbnail">
                         <img src="images/Japan_thumbnail.png" alt="">
@@ -66,6 +67,7 @@
                         <p class="project-description">This is a basic timeline and summary I made of the video "History of Japan" by Bill Wurtz, an incredibly funny and overly <span>chill guy who makes masterpieces with ocasional jingles. This one was for my freecodecamp 'Tribute Page' crtification project for their 'Responsive Web Design' course.</span></p>
                     </div>
                 </div>
+                -->
 
                 <div class="project" id="Recipe">
                     <div class="thumbnail">
@@ -111,6 +113,7 @@
             </div>
         </div>
 
+        <!--Nope
         <div class="PopOverlay" id="Japan-Popup">
             <div class="PopUp">
                 <button class="close-butt">&#10005;</button>
@@ -126,6 +129,7 @@
                 </form>
             </div>
         </div>
+        -->
 
         <div class="PopOverlay" id="Recipe-Popup">
             <div class="PopUp">
